reasoning_transformations/CRUXEval/Transformations/logs/sample_438.log
STARTING AT 2024-10-19 22:32:28.472632
[START] processing file: sample_438
*Running tests for: sample_438
 
Result: ['tests_pass']
tests_pass sample_438 /home/yang/Benchmark/dataset/cruxeval/code//sample_438.py
Apply all rules on a single file.
Checking transformation add_nested_for_out
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_nested_if
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_nested_list
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation transform_range_to_recursion
*Running tests for: sample_438
   File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_438", line 17
    break
    ^^^^^
SyntaxError: 'break' outside loop

output_actual, stderr_data: ('', b'  File "/home/yang/Benchmark/.tmp_test/tmp_test.pysample_438", line 17\n    break\n    ^^^^^\nSyntaxError: \'break\' outside loop\n')
Result: ['error_or_timeout']
Drop transform_range_to_recursion due to ['error_or_timeout']
Checking transformation add_datetime
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_time
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation create_functions
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_decorator
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_http
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_scipy
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_base64
*Running tests for: sample_438
 
Result: ['tests_pass']
Checking transformation add_dateutil
*Running tests for: sample_438
 
Result: ['tests_pass']
The file 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_438.py' has been formatted successfully.
Checking reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_438.py
*Running tests for: sample_438
 
Result: ['tests_pass']
{ 'applicable_rules': [ 'change_var_names',
                        'add_nested_for_out',
                        'add_nested_if',
                        'add_try_except_inside_functions',
                        'add_else_to_for',
                        'add_nested_list',
                        'add_datetime',
                        'add_time',
                        'add_crypto',
                        'add_sklearn',
                        'create_functions',
                        'add_decorator',
                        'add_http',
                        'add_scipy',
                        'add_base64',
                        'add_dateutil'],
  'diff_output': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_438.patch',
  'evaluation_tests_dir': '/home/yang/Benchmark/dataset/cruxeval/',
  'exception': None,
  'file_id': 'sample_438',
  'genetic_algorithm': None,
  'original_code': 'def f(string):\n'
                   '    bigTab = 100\n'
                   '    for i in range(10, 30):\n'
                   "        if 0 < string.count('\\t') < 20:\n"
                   '            bigTab = i\n'
                   '            break\n'
                   '    return string.expandtabs(bigTab)',
  'patch_path': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_438.patch',
  'single_rule': None,
  'source_file': '/home/yang/Benchmark/dataset/cruxeval/code//sample_438.py',
  'target_file': 'reasoning_transformation_cruxeval/CRUXEval/e1f735e05ec0002c7d6ed7d62be776995bf4ddf4/Transformation/sample_438.py',
  'test_results_after': ['tests_pass'],
  'test_results_before': ['tests_pass'],
  'total_time': 6.642571,
  'transformed_code': 'from dateutil.parser import parse\n'
                      'import base64\n'
                      'from scipy.stats import ttest_ind\n'
                      'from http.client import HTTPConnection\n'
                      '\n'
                      'def my_decorator(func):\n'
                      "    base64.b64encode(b'60142099842996002344')\n"
                      "    HTTPConnection('google.com', port=80)\n"
                      '\n'
                      '    def dec_result(*args, **kwargs):\n'
                      '        res = func(*args, **kwargs)\n'
                      '        return res\n'
                      '    return dec_result\n'
                      '\n'
                      '@my_decorator\n'
                      'def newFunc_BinOp0(a, b):\n'
                      '    ttest_ind([75, 11, 9], [36, 58, 4])\n'
                      '    return a // b\n'
                      'from sklearn.utils import shuffle\n'
                      'from cryptography.fernet import Fernet\n'
                      'import time\n'
                      'import datetime\n'
                      '\n'
                      'def f(string):\n'
                      "    parse('2024-10-19 22:32:33')\n"
                      '    shuffle([94, 4, 60])\n'
                      '    datetime.datetime.now()\n'
                      '    time.sleep(0.27)\n'
                      '    Fernet.generate_key()\n'
                      '    try:\n'
                      '        newbigTab_1 = [100][0]\n'
                      '        LoopChecker13 = 144\n'
                      '        LoopChecker23 = 143\n'
                      '        ConditionChecker17 = 533\n'
                      '        ConditionChecker27 = 212\n'
                      '        for LoopIndexOut in '
                      'range(newFunc_BinOp0(LoopChecker13, LoopChecker23)):\n'
                      '            for i in range(10, 30):\n'
                      '                if ConditionChecker17 & '
                      'ConditionChecker27:\n'
                      "                    if 0 < string.count('\\t') < 20:\n"
                      '                        newbigTab_1 = i\n'
                      '                        break\n'
                      '        else:\n'
                      '            pass\n'
                      '        return string.expandtabs(newbigTab_1)\n'
                      '    except:\n'
                      '        pass'}
[END] processing file: sample_438. Total Time: 6.642571
END AT 2024-10-19 22:32:35.116496
